Start creating tests for the original Java code, as the Kotlin code I converted doesn't work correctly for some reason (I can't imagine why...)